[package]
authors = ["Henning-K <henning.kowalk962@web.de>"]
description = "A subcommand for cargo that lists all the authors of all the dependencies\nof the crate in your current working directory.\nSimply install, then navigate to the directory of a crate and run `cargo authors`\n"
homepage = "https://github.com/Henning-K/cargo-authors"
keywords = ["cargo", "authors", "subcommand"]
license = "MIT/Apache-2.0"
name = "cargo-authors"
readme = "README.md"
repository = "https://github.com/Henning-K/cargo-authors"
version = "0.5.0"

[dependencies]
cargo = "0.39"
docopt = "1.1"
failure = "0.1"
lazy_static = "1.4.0"
regex = "1.3"
ripemd160 = "0.8.0"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
