[package]
authors = ["Henning-K <henning.kowalk962@web.de>"]
description = "A subcommand for cargo that lists all the authors of all the dependencies\nof the crate in your current working directory.\nSimply install, then navigate to the directory of a crate and run `cargo authors`\n"
homepage = "https://github.com/Henning-K/cargo-authors"
keywords = ["cargo", "authors", "subcommand"]
license = "MIT/Apache-2.0"
name = "cargo-authors"
readme = "README.md"
repository = "https://github.com/Henning-K/cargo-authors"
version = "0.5.2"

[dependencies]
anyhow = "1"
cargo = "0.67"
cargo_author = "1.0"
docopt = "1.1"
lazy_static = "1.4.0"
ripemd = "0.1"
serde = { version="1.0", features=["derive"] }
serde_json = "1.0"
